--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.16.0",
     "@babel/runtime": "^7.16.0",
-    "@bumaga/tabs": "^0.2.0",
-    "@craco/craco": "^6.3.0",
     "@kadena/cryptography-utils": "^0.1.4",
     "@ledgerhq/hw-transport-webhid": "^6.27.19",
     "@ledgerhq/logs": "^6.10.1",
-    "@reduxjs/toolkit": "^1.6.2",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^4.36.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -19,59 +17,47 @@
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.195",
     "@types/node": "^16.10.3",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
     "@types/webpack": "^5.28.0",
     "@walletconnect/core": "^2.5.2",
     "@walletconnect/web3wallet": "^1.5.0",
-    "apexcharts": "^3.44.0",
+    "apexcharts": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "bignumber.js": "^9.0.1",
     "bip39": "^3.0.4",
-    "cardano-crypto.js": "https://github.com/kadena-io/cardano-crypto.js.git#jam@chainweaver-keygen",
+    "cardano-crypto.js": "file:./lib/cardano-crypto.js",
     "copyfiles": "^2.4.1",
     "crypto-js": "^4.1.1",
-    "eslint-import-resolver-typescript": "^2.5.0",
     "hw-app-kda": "git+https://github.com/obsidiansystems/hw-app-kda",
-    "jspdf": "^2.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "node-sass": "4.14.1",
     "otpauth": "^9.1.1",
     "pact-lang-api": "^4.2.0",
-    "qrcode.react": "^1.0.1",
-    "react": "^17.0.2",
+    "qrcode.react": "^4.1.0",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.17.1",
     "react-jazzicon": "^1.0.4",
-    "react-json-view": "^1.21.3",
     "react-loading": "^2.0.3",
     "react-qr-code": "^2.0.11",
-    "react-qr-reader": "^2.2.1",
-    "react-redux": "^7.2.5",
+    "react-redux": "^9.1.2",
     "react-responsive-modal": "^6.1.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
     "react-toastify": "^8.0.3",
-    "reactjs-popup": "^2.0.5",
     "recharts": "^2.12.7",
-    "redux": "^4.1.1",
-    "redux-devtools-extension": "^2.13.9",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "regenerator-runtime": "^0.13.9",
-    "remote-redux-devtools": "^0.5.16",
+    "sass": "^1.81.0",
     "styled-components": "^5.3.1",
     "tweetnacl": "^1.0.3",
-    "typescript": "^4.4.3",
-    "web-vitals": "^1.0.1",
-    "webpack": "^4.44.2"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "copyfiles -u 1 \"public/**/*\" dist && craco start",
-    "build": "craco build && parcel build public/app/* -d build/app --no-source-maps --no-minify",
-    "parcel:build": "parcel build public/app/* -d build/app --no-source-maps --no-minify",
+    "start": "parcel watch public/manifest.json --host localhost --config @parcel/config-webextension",
+    "build": "parcel build public/manifest.json --config @parcel/config-webextension",
+    "clean": "rm -rf .parcel-cache dist build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext js,jsx,ts,tsx ./src",
@@ -98,24 +84,30 @@
     ]
   },
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "@ledgerhq/devices": "file:./node_modules/@ledgerhq/devices/lib-es"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^4.38.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/chrome": "0.0.221",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-webpack": "^0.13.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "parcel-bundler": "^1.12.5",
-    "prettier": "^2.5.1"
+    "@parcel/config-webextension": "^2.13.2",
+    "@parcel/transformer-sass": "^2.13.2",
+    "@parcel/transformer-typescript-tsc": "^2.13.2",
+    "@parcel/transformer-webmanifest": "^2.13.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/chrome": "^0.0.221",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "parcel": "^2.13.2",
+    "prettier": "^2.8.8",
+    "stream-browserify": "^3.0.0",
+    "typescript": "^5.7.2",
+    "util": "^0.12.5",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   },
   "targets": {
     "default": {
