--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,8 @@
   "version": "2.19.1",
   "manifest_version": 3,
   "background": {
-    "service_worker": "app/background.js"
+    "service_worker": "app/background.js",
+    "type": "module"
   },
   "web_accessible_resources": [
     {
@@ -31,12 +32,6 @@
   },
   "permissions": ["storage"],
   "host_permissions": ["https://api.chainweb.com/", "https://api.testnet.chainweb.com/", "https://api.coingecko.com/", "*://*/*"],
-  "icons": {
-    "16": "favicon.png",
-    "32": "favicon.png",
-    "48": "favicon.png",
-    "128": "favicon.png"
-  },
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   }
