--- a/.parcelrc
+++ b/.parcelrc
@@ -1,12 +1,11 @@
 {
   "extends": "@parcel/config-default",
-  "resolvers": [
-    "@parcel/resolver-default",
-    "parcel-resolver-custom"
-  ],
   "transformers": {
-    "manifest.json": [
-      "@parcel/transformer-raw"
+    "*.html": [
+      "@parcel/transformer-html"
     ]
+  },
+  "packagers": {
+    "*.html": "@parcel/packager-html"
   }
 }
