--- a/package.json
+++ b/package.json
@@ -49,14 +49,13 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "regenerator-runtime": "^0.13.9",
-    "sass": "^1.81.0",
     "styled-components": "^5.3.1",
     "tweetnacl": "^1.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "parcel watch public/manifest.json --host localhost --config @parcel/config-webextension",
-    "build": "parcel build public/manifest.json --dist-dir build --no-source-maps --no-optimize ",
+    "start": "webpack serve --config webpack.config.js",
+    "build": "webpack",
     "postbuild": "mv ./build/public.*.html ./build/index.html",
     "clean": "rm -rf .parcel-cache dist build",
     "test": "craco test",
@@ -94,23 +93,37 @@
     "@parcel/transformer-sass": "^2.13.2",
     "@parcel/transformer-typescript-tsc": "^2.13.2",
     "@parcel/transformer-webmanifest": "^2.13.2",
+    "@svgr/webpack": "^8.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/chrome": "^0.0.221",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "crypto-browserify": "^3.12.1",
+    "css-loader": "^7.1.2",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "https-browserify": "^1.0.0",
     "parcel": "^2.13.2",
     "prettier": "^2.8.8",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "style-loader": "^4.0.0",
     "svgo": "^3.3.2",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "util": "^0.12.5",
     "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "targets": {
     "default": {
