--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": ["esnext", "ES6", "DOM"],
+    "lib": ["ES6", "DOM"],
     "moduleResolution": "node",
     "baseUrl": ".",
-    "noEmit": true,
+    "noEmit": false,
     "strict": true,
-    "target": "esnext",
-    "module": "esnext",
+    "target": "ES6",
+    "module": "ES6",
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "noImplicitReturns": true,
@@ -19,19 +19,17 @@
     "noImplicitAny": false,
     "importHelpers": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@Components/*": ["src/components/*"],
+      "@Utils/*": ["src/utils/*"],
+      "@Css/*": ["src/css/*"],
+      "@Reducers/*": ["src/reducers/*"],
+      "@ledgerhq/devices": ["node_modules/@ledgerhq/devices/lib-es"]
+    }
   },
   "include": ["src/**/*", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"],
-  "paths": {
-    "@Components/*": ["src/components/*"],
-    "@Utils/*": ["src/utils/*"],
-    "@Css/*": ["src/css/*"],
-    "@Reducers/*": ["src/reducers/*"],
-    "@ledgerhq/devices": ["node_modules/@ledgerhq/devices/lib-es"]
-  }
+  "exclude": ["node_modules"]
 }
