Webpack improvements + Other library update + refactor

--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.17.1",
     "react-jazzicon": "^1.0.4",
+    "react-json-view-lite": "^2.0.1",
     "react-loading": "^2.0.3",
     "react-qr-code": "^2.0.11",
     "react-redux": "^9.1.2",
     "react-responsive-modal": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-select": "^5.1.0",
-    "react-toastify": "^8.0.3",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
@@ -55,9 +56,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "webpack serve --mode development --open --config webpack.config.js",
-    "build": "webpack",
-    "build:dev": "webpack --mode development --devtool source-map --config webpack.config.js",
+    "start": "webpack --watch --mode development --devtool source-map",
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development --devtool source-map",
     "clean": "rm -rf .parcel-cache dist build",
     "test": "craco test",
     "eject": "react-scripts eject",
@@ -100,6 +101,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "crypto-browserify": "^3.12.1",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
