Qr-code reader replaced - Qrcode react upgrade
Replace react-qr-reader with html5-qrcode for better QR code scanning functionality.
- Remove deprecated react-qr-reader dependency and unused CrossChainContext
- Add html5-qrcode implementation with improved error handling
- Update UI components to use new scanner
- Add scanning container with styled components
- Clean up unused context (CrossChainContext)

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cardano-crypto.js": "file:./lib/cardano-crypto.js",
     "copyfiles": "^2.4.1",
     "crypto-js": "^4.1.1",
+    "html5-qrcode": "^2.3.8",
     "hw-app-kda": "git+https://github.com/obsidiansystems/hw-app-kda",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
