--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/runtime": "^7.16.0",
     "@kadena/cryptography-utils": "^0.1.4",
+    "@kadena/hd-wallet": "^0.6.0",
     "@ledgerhq/hw-transport-webhid": "^6.27.19",
     "@ledgerhq/logs": "^6.10.1",
     "@reduxjs/toolkit": "^2.3.0",
