--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.17.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-jazzicon": "^1.0.4",
     "react-json-view-lite": "^2.0.1",
     "react-loading": "^2.0.3",
