--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ledgerhq/hw-transport-webhid": "^6.27.19",
     "@ledgerhq/logs": "^6.10.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@reown/walletkit": "^1.2.3",
     "@tanstack/react-query": "^4.36.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -20,7 +21,6 @@
     "@types/node": "^16.10.3",
     "@types/webpack": "^5.28.0",
     "@walletconnect/core": "^2.5.2",
-    "@walletconnect/web3wallet": "^1.5.0",
     "apexcharts": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "bignumber.js": "^9.0.1",
