Updates env configuration
- env confiuration simplified
- Simplex components removed

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,21 +22,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Create .env file
-        run: |
-          echo "REACT_APP_WALLET_CONNECT_PROJECT_ID=${{ secrets.REACT_APP_WALLET_CONNECT_PROJECT_ID }}" >> .env
-          echo "REACT_APP_WALLET_CONNECT_RELAY_URL=${{ secrets.REACT_APP_WALLET_CONNECT_RELAY_URL }}" >> .env
-          echo "REACT_APP_SIMPLEX_API_URL_DEV=${{ secrets.REACT_APP_SIMPLEX_API_URL_DEV }}" >> .env
-          echo "REACT_APP_SIMPLEX_API_URL_PROD=${{ secrets.REACT_APP_SIMPLEX_API_URL_PROD }}" >> .env
-          echo "REACT_APP_SIMPLEX_PUBLIC_KEY_DEV=${{ secrets.REACT_APP_SIMPLEX_PUBLIC_KEY_DEV }}" >> .env
-          echo "REACT_APP_SIMPLEX_PUBLIC_KEY_PROD=${{ secrets.REACT_APP_SIMPLEX_PUBLIC_KEY_PROD }}" >> .env
-          echo "REACT_APP_KDX_GOV_CHAIN_ID=${{ secrets.REACT_APP_KDX_GOV_CHAIN_ID }}" >> .env
-          echo "REACT_APP_ECKO_API_URL_DEV=${{ secrets.REACT_APP_ECKO_API_URL_DEV }}" >> .env
-          echo "REACT_APP_ECKO_API_URL_PROD=${{ secrets.REACT_APP_ECKO_API_URL_PROD }}" >> .env
-          echo "REACT_APP_ECKO_DEXTOOLS_API_URL=${{ secrets.REACT_APP_ECKO_DEXTOOLS_API_URL }}" >> .env
-
       - name: Build extension
         run: npm run build
+        env:
+          REACT_APP_WALLET_CONNECT_PROJECT_ID: ${{ secrets.REACT_APP_WALLET_CONNECT_PROJECT_ID }}
 
       - name: Zip build with tag
         run: |
