--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "buffer": "^6.0.3",
     "copyfiles": "^2.4.1",
     "crypto-js": "^4.1.1",
+    "emoji-flags": "^1.3.0",
     "html5-qrcode": "^2.3.8",
     "hw-app-kda": "git+https://github.com/obsidiansystems/hw-app-kda",
+    "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "otpauth": "^9.1.1",
@@ -39,6 +42,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.17.1",
+    "react-i18next": "^15.5.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-jazzicon": "^1.0.4",
     "react-json-view-lite": "^2.0.1",
