--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,34 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["app/script/inpage.js"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "app/script/inpage.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ],
   "content_scripts": [
     {
-      "matches": ["file://*/*", "http://*/*", "https://*/*"],
-      "js": ["app/content.js"],
+      "matches": [
+        "file://*/*",
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "app/content.js"
+      ],
+      "run_at": "document_start"
+    },
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "app/bringContent.js"
+      ],
       "run_at": "document_start"
     }
   ],
@@ -29,8 +49,17 @@
       "128": "favicon.png"
     }
   },
-  "permissions": ["storage"],
-  "host_permissions": ["https://api.chainweb.com/", "https://api.testnet.chainweb.com/", "https://api.coingecko.com/", "*://*/*"],
+  "permissions": [
+    "storage",
+    "tabs"
+  ],
+  "host_permissions": [
+    "https://api.chainweb.com/",
+    "https://api.testnet.chainweb.com/",
+    "https://api.coingecko.com/",
+    "https://*.bringweb3.io/",
+    "*://*/*"
+  ],
   "icons": {
     "16": "favicon.png",
     "32": "favicon.png",
